24 build jdk image (#25)
* initial implementation

* complete JVM image generation